[gd_scene load_steps=3 format=3 uid="uid://51pwd56pdo3s"]

[ext_resource type="Script" path="res://scripts/Day10Controller.gd" id="1"]

[sub_resource type="SystemFont" id="SystemFont_vvbjf"]
font_names = PackedStringArray("Monospace")

[node name="Node2D" type="Node2D"]
script = ExtResource("1")

[node name="MainMenuButton" type="Button" parent="."]
offset_right = 12.0
offset_bottom = 20.0
text = "Main Menu"

[node name="Puzzle1Button" type="Button" parent="."]
offset_top = 30.0
offset_right = 83.0
offset_bottom = 50.0
text = "Puzzle 1"

[node name="Puzzle2Button" type="Button" parent="."]
offset_top = 60.0
offset_right = 83.0
offset_bottom = 80.0
text = "Puzzle 2"

[node name="Puzzle1Label" type="Label" parent="."]
offset_left = 100.0
offset_top = 30.0
offset_right = 200.0
offset_bottom = 44.0

[node name="Puzzle2Label" type="Label" parent="."]
offset_left = 100.0
offset_top = 60.0
offset_right = 200.0
offset_bottom = 74.0

[node name="Puzzle2TextEdit" type="TextEdit" parent="."]
offset_left = 100.0
offset_top = 90.0
offset_right = 400.0
offset_bottom = 190.0
theme_override_fonts/font = SubResource("SystemFont_vvbjf")

[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="Puzzle1Button" to="." method="_on_Puzzle1Button_pressed"]
[connection signal="pressed" from="Puzzle2Button" to="." method="_on_Puzzle2Button_pressed"]
